fix some spacing

--- a/src/styles/laf.scss
+++ b/src/styles/laf.scss
@@ -44,6 +44,10 @@ h4 {
     text-indent: -1.5em;
     padding-left: 1.5em;
   }
+
+  li {
+    line-height: 1.25em;
+  }
 }
 
 .subheader {
