--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -76,6 +76,7 @@ main {
 
   .description {
     padding-left: 0.75em;
+    padding-bottom: 0.125em;
     display: flex;
     justify-content: space-between;
   }
